tests/examples/bad/bad008.lat
int main () {
    f().length = 5;
    return 0;
}


int[] f() {int[] arr = new int[5]; return arr;}